[gd_scene load_steps=7 format=2]

[ext_resource path="res://image/fondo.png" type="Texture" id=1]
[ext_resource path="res://image/button.png" type="Texture" id=2]
[ext_resource path="res://assets/Control.gd" type="Script" id=3]
[ext_resource path="res://kenney_fontpackage/helvetica_lt/HelveticaLTStdRoman.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[node name="Node2D" type="Node"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fondo" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu 1" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -212.0
margin_right = 100.0
margin_bottom = -54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="TextureButton" parent="Control/Menu 1"]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 45 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Menu 1/Jugar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = -12.5
margin_right = 29.5
margin_bottom = 12.5
custom_fonts/font = SubResource( 1 )
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="puntuacion" type="TextureButton" parent="Control/Menu 1"]
margin_top = 49.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 150, 45 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Menu 1/puntuacion"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -12.5
margin_right = 62.5
margin_bottom = 12.5
custom_fonts/font = SubResource( 2 )
text = "Puntuaciones"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credito" type="TextureButton" parent="Control/Menu 1"]
margin_top = 98.0
margin_right = 200.0
margin_bottom = 143.0
rect_min_size = Vector2( 150, 45 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Menu 1/Credito"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -12.5
margin_right = 38.5
margin_bottom = 12.5
custom_fonts/font = SubResource( 2 )
text = "Créditos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="PanelContainer" parent="Control"]
visible = false
margin_right = 400.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Creditos"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 693.0

[node name="exit" type="Button" parent="Control/Creditos/VBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
size_flags_horizontal = 0

[node name="Frase" type="Label" parent="Control/Creditos/VBoxContainer"]
margin_top = 24.0
margin_right = 386.0
margin_bottom = 106.0
text = "Somos un grupo de Estudiantes de la Universidad
del Quindio que con la ayuda de ciertos programas
diseñamos esta aplicacion y este juego etc..

Conoce a nuestro equipo"

[node name="Equipo" type="Label" parent="Control/Creditos/VBoxContainer"]
margin_top = 110.0
margin_right = 386.0
margin_bottom = 158.0
text = "Cristian Camilo Quiceno
Samara Rincon
Yesid Rosas"

[node name="Agradecimientos" type="Label" parent="Control/Creditos/VBoxContainer"]
margin_top = 162.0
margin_right = 386.0
margin_bottom = 210.0
text = "Los productores deseamos agradecerte
por jugar este juego y deseamos que lo 
hallas disfrutado mucho :)"

[connection signal="pressed" from="Control/Menu 1/Jugar" to="Control" method="_on_Jugar_pressed"]
[connection signal="pressed" from="Control/Menu 1/puntuacion" to="Control" method="_on_puntuacion_pressed"]
[connection signal="pressed" from="Control/Menu 1/Credito" to="Control" method="_on_Credito_pressed"]
[connection signal="pressed" from="Control/Creditos/VBoxContainer/exit" to="Control" method="_on_exit_pressed"]
